# fractal-flame

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  __init__.py  mp_symmetry_benchmark.py  mp_threads_benchmark.py  mp_workers_benchmark.py  render_gamma_benchmark.py
configs/: aurora_sym9.json  constellation_sym5.json  ember_ring_sym6.json  gamma_off.json  gamma_on.json  neon_flower_sym8.json  phoenix_sym11.json  pretty_flame.json  soft_smoke.json  spiral_core.json
examples/: README.md
src/benchmarks/: mp_symmetry_benchmark.py  mp_threads_benchmark.py  render_gamma_benchmark.py
src/flame/: __main__.py  affine.py  cli.py  config.py  core.py  mp_runner.py  render.py  transforms.py
src/tests/: test_affine.py  test_cli.py  test_config.py  test_core.py  test_gamma.py  test_image_generation.py  test_main.py  test_mp_runner.py  test_render.py  test_transforms.py
